config revamp, gui start