@@ -1,6 +1,10 @@
 package io.github.moehreag.axolotlclient.modules.hud;
 
+import io.github.moehreag.axolotlclient.Axolotlclient;
+import io.github.moehreag.axolotlclient.modules.AbstractModule;
 import io.github.moehreag.axolotlclient.modules.hud.gui.AbstractHudEntry;
+import io.github.moehreag.axolotlclient.modules.hud.gui.hud.FPSHud;
+import io.github.moehreag.axolotlclient.modules.hud.gui.hud.PingHud;
 import io.github.moehreag.axolotlclient.modules.hud.util.Rectangle;
 import net.legacyfabric.fabric.api.client.keybinding.v1.KeyBindingHelper;
 import net.minecraft.client.MinecraftClient;
@@ -8,11 +12,15 @@ import net.minecraft.client.options.KeyBinding;
 import net.minecraft.util.Identifier;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
-public class HudManager {
+public class HudManager extends AbstractModule {
 
     private final Map<Identifier, AbstractHudEntry> entries = new HashMap<>();
     private final MinecraftClient client = MinecraftClient.getInstance();
+    private static final HudManager INSTANCE = new HudManager();
+
+    private PingHud test1 = new PingHud();
 
     static KeyBinding key = new KeyBinding("key.openHud", 54, "category.axolotlclient");
 
@@ -20,9 +28,17 @@ public class HudManager {
 
     }
 
-    public static void init(){
+    public static HudManager getINSTANCE(){
+        return INSTANCE;
+    }
+
+    public void init(){
 
         KeyBindingHelper.registerKeyBinding(key);
+
+        test1.toggle();
+        add(test1);
+        add(new FPSHud());
     }
 
     public static void tick(){
@@ -30,7 +46,7 @@ public class HudManager {
     }
 
     public HudManager add(AbstractHudEntry entry) {
-        //entries.put(entry.getId(), entry);
+        entries.put(entry.getId(), entry);
         return this;
     }
 
@@ -42,9 +58,9 @@ public class HudManager {
     }
 
     public List<AbstractHudEntry> getMoveableEntries() {
-        /*if (entries.size() > 0) {
-            return entries.values().stream().filter((entry) -> entry.isEnabled() && entry.movable()).toList();
-        }*/
+        if (entries.size() > 0) {
+            return entries.values().stream().filter((entry) -> entry.isEnabled() && entry.movable()).collect(Collectors.toList());
+        }
         return new ArrayList<>();
     }
 
@@ -55,27 +71,27 @@ public class HudManager {
     public void render() {
         if (!(client.currentScreen instanceof HudEditScreen) && !client.options.debugEnabled) {
             for (AbstractHudEntry hud : getEntries()) {
-                /*if (hud.isEnabled()) {
+                if (hud.isEnabled()) {
                     hud.renderHud();
-                }*/
+                }
             }
         }
     }
 
     public void renderPlaceholder() {
         for (AbstractHudEntry hud : getEntries()) {
-            /*if (hud.isEnabled()) {
+            if (hud.isEnabled()) {
                 hud.renderPlaceholder();
-            }*/
+            }
         }
     }
 
     public Optional<AbstractHudEntry> getEntryXY(int x, int y) {
         for (AbstractHudEntry entry : getMoveableEntries()) {
-            /*Rectangle bounds = entry.getScaledBounds();
+            Rectangle bounds = entry.getScaledBounds();
             if (bounds.x <= x && bounds.x + bounds.width >= x && bounds.y <= y && bounds.y + bounds.height >= y) {
                 return Optional.of(entry);
-            }*/
+            }
         }
         return Optional.empty();
     }
@@ -83,7 +99,7 @@ public class HudManager {
     public List<Rectangle> getAllBounds() {
         ArrayList<Rectangle> bounds = new ArrayList<>();
         for (AbstractHudEntry entry : getMoveableEntries()) {
-            //bounds.add(entry.getScaledBounds());
+            bounds.add(entry.getScaledBounds());
         }
         return bounds;
     }
